--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <div id="main"></div>
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="public/style.css">
 </body>
 </html>
